--- a/Oops-Android/app/src/main/res/layout/fragment_friends.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_friends.xml
@@ -16,20 +16,19 @@
         android:id="@+id/edt_friends_search_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/Body1"
         android:hint="@string/friends_nickname"
         android:textColorHint="@color/Gray_400"
-        android:fontFamily="@font/pretendard_regular"
-        android:textSize="16sp"
-        android:textColor="#111827"
+        android:textColor="@color/Gray_900"
         android:maxLines="1"
         android:background="@drawable/all_radius_50"
         android:backgroundTint="@color/Gray_100"
-        android:drawableStart="@drawable/ic_search_20"
+        android:drawableStart="@drawable/ic_search_27"
         android:paddingTop="14dp"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
+        android:paddingStart="22dp"
+        android:paddingEnd="22dp"
         android:paddingBottom="14dp"
-        android:drawablePadding="16dp"
+        android:drawablePadding="13dp"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
