--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -50,6 +50,9 @@
         <action
             android:id="@+id/action_inventoryFrm_to_createInventoryFrm"
             app:destination="@id/createInventoryFragment"/>
+        <action
+            android:id="@+id/action_inventoryFrm_to_stuffAddFrm"
+            app:destination="@id/stuffAddFragment"/>
 
         <!-- 생성&수정&삭제 여부 변수 -->
         <argument
@@ -88,6 +91,28 @@
         <action
             android:id="@+id/action_createInventoryFrm_to_inventoryFrm"
             app:destination="@id/inventoryFragment"/>
+
+        <action
+            android:id="@+id/action_createInventoryFrm_to_stuffAddFrm"
+            app:destination="@id/stuffAddFragment"/>
+    </fragment>
+
+     <!-- 소지품 추가 -->
+    <fragment
+        android:id="@+id/stuffAddFragment"
+        android:name="com.oops.oops_android.ui.Main.Inventory.Stuff.StuffAddFragment"
+        android:label="frm_stuff_add"
+        tools:layout="@layout/fragment_stuff_add">
+        <!-- 홈 화면 or 인벤토리 화면 진입 여부 -->
+        <argument
+            android:name="stuffDivision"
+            app:argType="string"/>
+
+        <!-- 현재 선택 중인 소지품 리스트 -->
+        <argument
+            android:name="stuffList"
+            app:argType="com.oops.oops_android.ui.Main.Inventory.CategoryItemUI"
+            app:nullable="true"/>
     </fragment>
 
     <!-- 콕콕 찌르기 -->
