Feat: Oops 회원가입, 중복 검사, 로그인 API 연동 및 Room DB 사용
- Room DB 사용에 따른 spf 일부 함수들 정리
- 닉네임 중복 검사, 이메일 중복 검사, Oops 회원가입 API 연동 완료

--- a/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
@@ -294,6 +294,7 @@
 
             <!-- 로그아웃 -->
             <TextView
+                android:id="@+id/tv_myPage_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/myPage_logout"
