Feat: 회원 탈퇴1 화면 UI 및 클릭 이벤트 구현
- 화면 UI 디자인 완료
- 라디오 버튼 클릭 이벤트 적용
- 탈퇴할게요 버튼 클릭 이벤트 적용

--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -196,6 +196,17 @@
         <action
             android:id="@+id/action_accountFrm_to_myPageFrm"
             app:destination="@id/myPageFragment"/>
+        <action
+            android:id="@+id/action_accountFrm_to_frm_withdrawal_1Frm"
+            app:destination="@id/withdrawal1Fragment"/>
+    </fragment>
+
+    <!-- 회원 탈퇴 1 -->
+    <fragment
+        android:id="@+id/withdrawal1Fragment"
+        android:name="com.oops.oops_android.ui.MyPage.Withdrawal1Fragment"
+        android:label="frm_withdrawal_1"
+        tools:layout="@layout/fragment_withdrawal1">
     </fragment>
 
     <!-- 알림 설정 -->
