Refactor: MainPage 폴더 구조 변경
- Main > MainPage로 변경

--- a/Oops-Android/app/src/main/res/layout/fragment_alert.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_alert.xml
@@ -8,7 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/White"
     android:orientation="vertical"
-    tools:context=".ui.MyPage.AlertFragment">
+    tools:context=".ui.Main.MyPage.AlertFragment">
 
     <include
         android:id="@+id/toolbar_alert"
