--- a/Oops-Android/app/src/main/res/layout/fragment_account.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_account.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/White"
-    tools:context=".ui.MyPage.AccountFragment">
+    tools:context=".ui.Main.MyPage.AccountFragment">
 
     <include
         android:id="@+id/toolbar_account"
