--- a/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.MyPage.MyPageFragment"
+    tools:context=".ui.Main.MyPage.MyPageFragment"
     android:background="@color/White"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
