--- a/Oops-Android/app/src/main/res/layout/fragment_terms.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_terms.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/White"
-    tools:context=".ui.MyPage.TermsFragment">
+    tools:context=".ui.Main.MyPage.TermsFragment">
 
     <!-- 툴 바 -->
     <include
