--- a/Oops-Android/app/src/main/res/layout/fragment_withdrawal1.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_withdrawal1.xml
@@ -8,7 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/White"
-    tools:context=".ui.MyPage.Withdrawal1Fragment">
+    tools:context=".ui.Main.MyPage.Withdrawal1Fragment">
 
     <!-- 툴 바 -->
     <include
