--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -222,7 +222,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="36dp"
                     android:text="소지품을 모두 챙겼어요"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:textColor="@color/Gray_400"
                     android:textAlignment="center"/>
@@ -231,8 +231,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="오늘도 즐거운 외출 되세요"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/pretendard_regular"
+                    style="@style/Button3"
                     android:textColor="@color/Gray_400"
                     android:textAlignment="center"
                     android:layout_marginBottom="36dp"/>
