--- a/Oops-Android/app/src/main/res/layout/fragment_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_todo.xml
@@ -495,7 +495,6 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="40dp"
@@ -505,13 +504,15 @@
                     android:id="@+id/btn_todo_create"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     style="@style/WideButtonDisableStyle"
-                    android:backgroundTint="@color/Gray_100"
+                    android:background="@color/Gray_100"
                     android:text="@string/btn_create"/>
             </androidx.cardview.widget.CardView>
 
             <!-- 수정 화면에 나타 날 버튼 -->
             <LinearLayout
+                android:id="@+id/lLayout_todo_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
