--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -308,18 +308,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="외출 계획이 없으신가요?"
-                    android:textSize="18sp"
-                    android:textColor="@color/Gray_400"
-                    android:fontFamily="@font/pretendard_bold" />
+                    style="@style/H4"
+                    android:textColor="@color/Gray_400"/>
 
                 <!-- default 텍스트 -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="우측 상단 + 버튼을 눌러 추가해 주세요"
-                    android:textSize="14sp"
+                    style="@style/Body2"
                     android:textColor="@color/Gray_400"
-                    android:fontFamily="@font/pretendard_medium"
                     android:layout_marginTop="8dp"/>
 
             </LinearLayout>
